gui almost complete

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/MetaLabs
 excludes=
+file.reference.flatlaf-3.0.jar=D:\\kyle\\[desktop\\Lockette\\Locker\\Kyle Files\\UM\\College1\\CCE 107 - Intermediate Programming\\MetaLabs\\flatlaf-3.0.jar
+file.reference.flatlaf-intellij-themes-3.0.jar=D:\\kyle\\[desktop\\Lockette\\Locker\\Kyle Files\\UM\\College1\\CCE 107 - Intermediate Programming\\MetaLabs\\flatlaf-intellij-themes-3.0.jar
+file.reference.sqlite-jdbc-3.40.1.0.jar=D:\\kyle\\[desktop\\Lockette\\Locker\\Kyle Files\\UM\\College1\\CCE 107 - Intermediate Programming\\others\\sqlite-jdbc-3.40.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.0.jar}:\
+    ${file.reference.flatlaf-intellij-themes-3.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.40.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
