New additions mostly on the front-end side of things: • Fixed student initialization screen • Added Dashboard panel • Added Payment Panel • TEMPORARILY added a feature to block access in CE if user hasn't payed down payment yet
~next commit will focus more on the back-end and database of the system.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-3.0.jar}:\
     ${file.reference.flatlaf-intellij-themes-3.0.jar}:\
-    ${file.reference.sqlite-jdbc-3.40.1.0.jar}
+    ${file.reference.sqlite-jdbc-3.40.1.0.jar}:\
+    ${reference.CES.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,6 +84,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.CES=../codex-master
+reference.CES.jar=${project.CES}/dist/CES.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
