Updated the back-end & database side of things, mostly for the student-users: • Added checkout function • Added mastercard payment function • Added condition accesser in the Course Screen when downpayment is met • Added function that calculates the general balance of the student's fees • Added function that updates the Dashboard Screen • Added new columns to database (downpayment, total assessment, current balance) • Integrated calculations to database • Integrated the database to Dashboard Screen
~mostly done in the general flow of the program, next commit will focus more on polishing and fixes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${file.reference.flatlaf-3.0.jar}:\
     ${file.reference.flatlaf-intellij-themes-3.0.jar}:\
     ${file.reference.sqlite-jdbc-3.40.1.0.jar}:\
-    ${reference.CES.jar}
+    ${reference.CES.jar}:\
+    ${reference.CES-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,6 +86,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.CES=../codex-master
+project.CES-1=../gester2
+reference.CES-1.jar=${project.CES-1}/dist/CES.jar
 reference.CES.jar=${project.CES}/dist/CES.jar
 run.classpath=\
     ${javac.classpath}:\
